--- a/07-PizzaMenu/src/index.css
+++ b/07-PizzaMenu/src/index.css
@@ -11,11 +11,11 @@
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 65.5%;
 }
 
 body {
-  font-family: "Roboto Mono", sans-serif;
+  font-family: "Roboto Mono", monospace;
   color: #252525;
   font-weight: 400;
   background-color: #f7f2e9;
