--- a/11-NotesList/src/index.css
+++ b/11-NotesList/src/index.css
@@ -45,14 +45,12 @@ h1 {
 .add-form {
   background-color: #e5771f;
   padding: 2.8rem 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
   gap: 0.8rem;
 }
 
 h3 {
-  margin-right: 1.6rem;
+   margin-bottom: 6px;
   font-size: 2.4rem;
 }
 
@@ -66,8 +64,9 @@ input {
   border-radius: 10rem;
   padding: 1.2rem 3.2rem;
   font-weight: 700;
-  font-size: 1.8rem;
+  font-size: 2.5rem;
   cursor: pointer;
+ margin-left: 15px;
 }
 
 .add-form button {
@@ -79,7 +78,7 @@ input {
   background-color: #5a3e2b;
   color: #ffebb3;
   padding: 4rem 0;
-
+  height: 60vh;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -90,9 +89,9 @@ input {
 .actions button,
 .list select {
   text-transform: uppercase;
-  padding: 0.8rem 2.4rem;
-  font-size: 1.4rem;
-  font-weight: 700;
+  padding: 2rem 2.4rem;
+  font-size: 1.9rem;
+  font-weight: 900;
   margin: 0 0.8rem;
 }
 
@@ -100,7 +99,6 @@ input {
   list-style: none;
   width: 80%;
   overflow: scroll;
-
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 1.2rem;
